2015-5-20 移除baseUrl的路径

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -207,7 +207,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .nav li a {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
     font-weight: 400;
     letter-spacing: 1px;
     color: #fff;
