--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
+                    <h4 class="service-heading">学校简介</h4>
                     <p class="text-muted">我中心坐落在美丽的长江河畔，与历史悠久的武汉音乐学院为邻。师资来自音乐学院，聘请知名教授与经验丰富的导师与学生面对面交流，拥有较好的学习生活氛围和专业的教学队伍。</p>
                 </div>
                 <div class="col-md-4">
