--- a/_includes/services.html
+++ b/_includes/services.html
@@ -21,16 +21,16 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">师资力量</h4>
+                    <p class="text-muted">我中心师资来自于音乐学院与武汉各大名校。根据学生所学专业及报考的学校，将其推荐给音乐学院合适的专业教授进行一对一的辅导。由专业老师对每个学生做到全方位评估、检测，保证学生所学专业知识的系统化和整体化，使考生在较短时间内掌握专业考试的技巧和方法，可以在短时间大幅提高学生的应试能力，提高专业考试通过率；</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">专业辅导</h4>
+                    <p class="text-muted">组织武汉音乐学院研究生对学生进行一对一的陪练，帮助学生在日常专业课练习中及时找到不足并加以改正，在短时间内得到更大的提高；聘请武汉各大高校文化课老师，开设整个高中阶段的文化课课程，专业课和文化课结合，不会顾此失彼。</p>
                 </div>
             </div>
         </div>
