--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">我们一直在努力</h2>
+                    <h3 class="section-subheading text-muted">不一样的学校，不一样的老师</h3>
                 </div>
             </div>
             <div class="row text-center">
