--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,14 +22,12 @@
                         <a class="page-scroll" href="#services">学校简介</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">师资力量</a>
+                        <a class="page-scroll" href="#portfolio">教学特色</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">教师风采</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#team">教学特色</a>
-                    </li>
+
                     <li>
                         <a class="page-scroll" href="#team">课程介绍</a>
                     </li>
