--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,11 +25,10 @@
                         <a class="page-scroll" href="#portfolio">教学特色</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">教师风采</a>
+                        <a class="page-scroll" href="#about">课程介绍</a>
                     </li>
-
                     <li>
-                        <a class="page-scroll" href="#team">课程介绍</a>
+                        <a class="page-scroll" href="#team">教师风采</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">招生简章</a>
