--- a/_includes/about.html
+++ b/_includes/about.html
@@ -67,28 +67,28 @@
                             </div>
                         </li>
 
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>陪练</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">研究生陪练，能帮助学生在日常专业课练习中及时找到不足并加以改正。</p>
-                                </div>
-                            </div>
-                        </li>
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>观摩</h4>
+                                    <h4>陪练</h4>
                                     <h4 class="subheading">Transition to Full Service</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">研究生陪练，能帮助学生在日常专业课练习中及时找到不足并加以改正。</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>观摩</h4>
+                                    <h4 class="subheading">Phase Two Expansion</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">每周一次大型观摩，模拟考场实训，帮助学员建立争取良好的应考心态，让学员在真正的考场从容不迫、如鱼得水。</p>
@@ -96,15 +96,14 @@
                             </div>
                         </li>
 
-
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>自习</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4 class="subheading">Transition to Full Service</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">早晚自习由班主任辅导，用来完成作业，消化当天所学的知识，及时解决遗留问题。</p>
