--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>音乐学院教授专业课</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4 class="subheading">Lecture by professor of conservatory</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted"> 包含钢琴，声乐，西洋乐器（小提琴，大提琴，长笛等），民族乐器（古筝，琵琶等），通俗演唱，视唱练耳等专业，可根据学生自身情况确定上课次数。</p>
@@ -31,7 +31,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>基础乐理课</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4 class="subheading">Basic music theory courses</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">每周除进行正常的乐理课程外还有一次乐理考试，帮助学生及时发现自身不足.</p>
@@ -45,7 +45,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>视唱练耳课</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4 class="subheading">Sightsinging and ear training courses</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">每周除正常的视唱练耳课程外还有一次视唱练耳考试，帮助学生及时发现自身不足.</p>
@@ -59,7 +59,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>文化课</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">Culture Courses</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">包含语文课，数学课，英语课，政治课，历史课，地理课，专业课和文化课相结合，不会顾此失彼。</p>
@@ -74,7 +74,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>陪练</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4 class="subheading">Accompany Training</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">研究生陪练，能帮助学生在日常专业课练习中及时找到不足并加以改正。</p>
@@ -88,7 +88,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>观摩</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">drill every week</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">每周一次大型观摩，模拟考场实训，帮助学员建立争取良好的应考心态，让学员在真正的考场从容不迫、如鱼得水。</p>
@@ -103,7 +103,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>自习</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4 class="subheading">Individual Study</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">早晚自习由班主任辅导，用来完成作业，消化当天所学的知识，及时解决遗留问题。</p>
