--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
+    {% include tearchers.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
