--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -862,3 +862,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
 }
+
+div.outer_container { margin-bottom: 50px; background-color: #eeeeee;  }
+div.row { margin-left: 0; margin-right: 0; overflow: hidden; }
+div.container { margin: 0 auto; }
