--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -863,6 +863,7 @@ body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
 }
 
-div.outer_container { margin-bottom: 50px; background-color: #eeeeee;  }
-div.row { margin-left: 0; margin-right: 0; overflow: hidden; }
-div.container { margin: 0 auto; }
+section { padding-top: 85px; margin-top: -85px; }
+section .outer_container { margin-bottom: 50px; background-color: #eeeeee;  }
+section .row { margin-left: 0; margin-right: 0; overflow: hidden; }
+section h1 { text-transform: uppercase; color: white; margin-top: 0px; margin-bottom: 0px; line-height: 280px; text-align: center; }
