--- a/_includes/teachers.html
+++ b/_includes/teachers.html
@@ -1,4 +1,4 @@
-
+<section id="about">
 <div class="container">
     <div class="row">
         <div class="col col-md-5 col-sm-12"><h1>About us</h1></div>
@@ -17,3 +17,4 @@
         </div>
     </div>
 </div>
+</section>
