--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
-    {% include teachers.html %}
+<!--    {% include teachers.html %}-->
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
