--- a/_includes/team.html
+++ b/_includes/team.html
@@ -15,7 +15,9 @@
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
+
                             {% for network in member.social %}
+                            <p class="text-muted">我中心师资来自于音乐学院与武汉各大名校。根据学生所学专业及报考的学校，将其推荐给音乐学院合适的专业教授进行一对一的辅导。由专业老师对每个学生做到全方位评估、检测，保证学生所学专业知识的系统化和整体化，使考生在较短时间内掌握专业考试的技巧和方法，可以在短时间大幅提高学生的应试能力，提高专业考试通过率；</p>
                             <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
                             {% endfor %}
 
