--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,44 +1,34 @@
 
 
-
+<div class="container">
 <table class="table table-hover table-bordered" >
     <caption>上下文表格布局</caption>
     <thead>
     <tr>
         <th>专业</th>
         <th>专业方向</th>
-
     </tr>
     </thead>
     <tbody>
     <tr class="active">
         <td rowspan="5" align="center"  style:"vertical-align: middle" >
         音乐学</td>
-
     </tr>
     <tr  align="center">
-
         <td>音乐教育</td>
-
     </tr>
     <tr   align="center">
-
         <td>音乐学理论</td>
-
     </tr>
     <tr   align="center">
-
         <td>艺术管理</td>
-
     </tr>
     <tr   align="center">
-
         <td>钢琴调律</td>
-
     </tr>
     </tbody>
 </table>
-
+</div>
 
 <!-- Clients Aside -->
     <aside class="clients">
