--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
     <tr class="active">
-        <td rowspan="5" align="center"  style:"vertical-align: middle" >
+        <td rowspan="5" align="center" valign="center">
         音乐学</td>
     </tr>
     <tr  align="center">
@@ -26,6 +26,27 @@
     <tr   align="center">
         <td>钢琴调律</td>
     </tr>
+
+    <tr class="active">
+        <td rowspan="5" align="center" valign="center">
+            音乐学</td>
+    </tr>
+    <tr  align="center">
+        <td>音乐教育</td>
+    </tr>
+    <tr   align="center">
+        <td>音乐学理论</td>
+    </tr>
+    <tr   align="center">
+        <td>艺术管理</td>
+    </tr>
+    <tr   align="center">
+        <td>钢琴调律</td>
+    </tr>
+
+
+
+
     </tbody>
 </table>
 </div>
