--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -10,8 +10,8 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="active">
-        <td rowspan="5" align="center" valign="center">
+    <tr >
+        <td rowspan="5" align="center" valign="middle">
         音乐学</td>
     </tr>
     <tr  align="center">
@@ -27,25 +27,32 @@
         <td>钢琴调律</td>
     </tr>
 
-    <tr class="active">
-        <td rowspan="5" align="center" valign="center">
-            音乐学</td>
+    <tr >
+        <td rowspan="5" align="center" valign="middle">
+            音乐表演</td>
     </tr>
     <tr  align="center">
-        <td>音乐教育</td>
+        <td>演唱（美声、民族声乐）</td>
     </tr>
     <tr   align="center">
-        <td>音乐学理论</td>
+        <td>通俗声乐演唱与编导（含通俗声乐、美声、民族声乐）</td>
     </tr>
     <tr   align="center">
-        <td>艺术管理</td>
+        <td>中国乐器演奏（二胡、琵琶、扬琴、古筝、竹笛、笙、唢呐、民族打击乐器）</td>
     </tr>
     <tr   align="center">
-        <td>钢琴调律</td>
+        <td>西洋管弦•打击乐器演奏（小提琴、中提琴、大提琴、低音提琴、小号、圆号、长号、大号、长笛、双簧管、单簧管、大管、西洋打击乐器、竖琴）</td>
     </tr>
 
-
-
+    <tr   align="center">
+        <td>钢琴演奏</td>
+    </tr>
+    <tr   align="center">
+        <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
+    </tr>
+    <tr   align="center">
+        <td>通俗乐器演奏（爵士鼓、古典吉他、萨克斯管）</td>
+    </tr>
 
     </tbody>
 </table>
