--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 <table class="table table-hover table-bordered" >
-    <caption>上下文表格布局</caption>
+    <caption><b>专业方向</b></caption>
     <thead>
     <tr>
         <th>专业</th>
@@ -28,7 +28,7 @@
     </tr>
 
     <tr >
-        <td rowspan="7" align="center" valign="middle">
+        <td rowspan="8" align="center" valign="middle">
             音乐表演</td>
     </tr>
     <tr  align="center">
