--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
                         <a class="page-scroll" href="#team">教师风采</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">招生简章</a>
+                        <a class="page-scroll" href="#clients">招生简章</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">联系我们</a>
