--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,12 +1,12 @@
 
-
+<section id="clients" class="bg-light-gray">
 <div class="container">
 <table class="table table-hover table-bordered" >
     <caption><b>专业方向</b></caption>
     <thead>
     <tr>
-        <th>专业</th>
-        <th>专业方向</th>
+        <th align="center">专业</th>
+        <th align="center">专业方向</th>
     </tr>
     </thead>
     <tbody>
@@ -57,8 +57,8 @@
     </tbody>
 </table>
 </div>
-
-<!-- Clients Aside -->
+</section>
+<!-- Clients Aside
     <aside class="clients">
         <div class="container">
             <div class="row">
@@ -84,4 +84,4 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside>-->
