--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -863,7 +863,8 @@ body {
     webkit-tap-highlight-color: #{{ site.color.primary }};
 }
 
-td
+td th
 {
     text-align:center;
+    font-family: "Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
 }
