--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,12 +1,12 @@
 
-<section id="clients" class="bg-light-gray">
+<section id="clients" >
 <div class="container">
 <table class="table table-hover table-bordered" >
     <caption><b>专业方向</b></caption>
     <thead>
     <tr>
-        <th align="center">专业</th>
-        <th align="center">专业方向</th>
+        <th align="center" width="20%">专业</th>
+        <th align="center" width="80%">专业方向</th>
     </tr>
     </thead>
     <tbody>
