--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,7 +1,7 @@
 
 <section id="clients" >
 <div class="container">
-<table class="table table-hover table-bordered" >
+<table class="table table-hover table-bordered"  text-align="center">
     <caption><b>专业方向</b></caption>
     <thead>
     <tr>
