--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -56,6 +56,70 @@
 
     </tbody>
 </table>
+
+
+    <table class="table table-hover table-bordered"  text-align="center">
+        <caption><b>各专业开设课程</b></caption>
+        <tbody>
+        <thead>
+        <tr>
+            <th align="center" width="10%">专业</th>
+            <th align="center" width="30%">专业方向</th>
+            <th align="center" width="60%">课程</th>
+        </tr>
+        </thead>
+        <tr >
+            <td rowspan="4" align="center" valign="middle">
+                音乐学</td>
+        </tr>
+        <tr  align="center">
+            <td>音乐教育</td>
+            <td>视唱练耳课，基础乐理课，钢琴教授专业课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+        <tr   align="center">
+            <td>音乐学理论</td>
+            <td>视唱练耳课，基础乐理课，声乐或钢琴或其他乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+        <tr   align="center">
+            <td>钢琴调率方向</td>
+            <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+
+
+        <tr >
+            <td rowspan="8" align="center" valign="middle">
+                音乐表演</td>
+        </tr>
+
+        <tr   align="center">
+            <td>演唱（美声，民族声乐，通俗声乐演唱与编导）</td>
+            <td>视唱练耳课，基础乐理课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
+
+        </tr>
+        <tr   align="center">
+            <td>中国乐器演奏</td>
+            <td>视唱练耳课，基础乐理课，中国乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+        <tr   align="center">
+            <td>西洋管弦•打击乐器演奏</td>
+            <td>视唱练耳课，基础乐理课，西洋乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+
+        <tr   align="center">
+            <td>钢琴演奏</td>
+            <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+        <tr   align="center">
+            <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
+            <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+        <tr   align="center">
+            <td>通俗乐器演奏</td>
+            <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
+        </tr>
+
+        </tbody>
+    </table>
 </div>
 </section>
 <!-- Clients Aside
