--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,7 +1,7 @@
 
 <section id="clients" >
 <div class="container">
-<table class="table table-hover table-bordered"  text-align="center">
+<table   text-align="center">
     <caption><b>专业方向</b></caption>
     <thead>
     <tr>
@@ -58,7 +58,7 @@
 </table>
 
 
-    <table class="table table-hover table-bordered"  text-align="center">
+    <table   text-align="center">
         <caption><b>各专业开设课程</b></caption>
         <tbody>
         <thead>
