--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -58,7 +58,7 @@
 </table>
 
 
-    <table   text-align="center" border="1" cellspacing="0">
+    <table   text-align="center" border="1" cellspacing="0" frame="void">
         <caption><b>各专业开设课程</b></caption>
         <tbody>
         <thead>
