--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,7 +1,7 @@
 
 <section id="clients" >
 <div class="container">
-<table   text-align="center" border="1"  cellspacing="0" >
+<table  class="table table-bordered table-responsive table-hover"  text-align="center" border="1"  cellspacing="0" >
     <caption><b>专业方向</b></caption>
     <thead>
     <tr>
@@ -58,7 +58,7 @@
 </table>
 
 
-    <table   text-align="center" border="1" cellspacing="0" frame="void">
+    <table class="table table-bordered table-responsive table-hover"   text-align="center" border="1" cellspacing="0">
         <caption><b>各专业开设课程</b></caption>
         <tbody>
         <thead>
