--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -29,7 +29,14 @@
 
     <tr >
         <td rowspan="8" align="center" valign="middle" >
-            音乐表演</td>
+            <div vertical-align="middle" >
+                <b >
+                    音乐表演
+                </b>
+
+            </div>
+
+        </td>
     </tr>
     <tr  align="center">
         <td>演唱（美声、民族声乐）</td>
