--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -29,7 +29,7 @@
 
     <tr >
         <td rowspan="8" align="center" valign="middle" >
-            <div vertical-align="middle" >
+            <div style="padding-top: 24px;padding-bottom: 24px;" >
                 <b >
                     音乐表演
                 </b>
