--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,8 +1,8 @@
 
 <section id="clients" >
 <div class="container">
-<table  class="table table-bordered table-responsive table-hover"  text-align="center" border="1"  cellspacing="0" >
-    <caption><b>专业方向</b></caption>
+<table  class="table table-bordered table-responsive table-hover" style="padding-top: 30px" text-align="center" border="1"  cellspacing="0" >
+    <caption><h2>专业方向</h2></caption>
     <thead>
     <tr>
         <th align="center" width="20%">专业</th>
@@ -65,8 +65,8 @@
 </table>
 
 
-    <table class="table table-bordered table-responsive table-hover"   text-align="center" border="1" cellspacing="0">
-        <caption><b>各专业开设课程</b></caption>
+    <table class="table table-bordered table-responsive table-hover" style="padding-top: 30px"  text-align="center" border="1" cellspacing="0">
+        <caption><h2>各专业开设课程</h2></caption>
         <tbody>
         <thead>
         <tr>
