--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
     <tr >
-        <td rowspan="5" align="center" valign="middle">
+        <td rowspan="5" align="center" style="vertical-align: middle;">
         音乐学</td>
     </tr>
     <tr  align="center">
