--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -28,14 +28,10 @@
     </tr>
 
     <tr >
-        <td rowspan="8" align="center" valign="middle" >
-            <div style="padding-top: 24px;padding-bottom: 24px;" >
+        <td rowspan="8" align="center" style="vertical-align: middle;" >
                 <b >
                     音乐表演
                 </b>
-
-            </div>
-
         </td>
     </tr>
     <tr  align="center">
@@ -76,7 +72,7 @@
         </tr>
         </thead>
         <tr >
-            <td rowspan="4" align="center" valign="middle">
+            <td rowspan="4" align="center" style="vertical-align: middle;">
                 音乐学</td>
         </tr>
         <tr  align="center">
@@ -94,7 +90,7 @@
 
 
         <tr >
-            <td rowspan="7" align="center" valign="middle">
+            <td rowspan="7" align="center" style="vertical-align: middle;">
                 音乐表演</td>
         </tr>
 
