--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
     <tr >
-        <td rowspan="5" align="center" style="vertical-align: middle;">
+        <td rowspan="5" align="center" valign="middle">
         音乐学</td>
     </tr>
     <tr  align="center">
@@ -28,10 +28,14 @@
     </tr>
 
     <tr >
-        <td rowspan="8" align="center" style="vertical-align: middle;" >
+        <td rowspan="8" align="center" valign="middle" >
+            <div style="padding-top: 24px;padding-bottom: 24px;" >
                 <b >
                     音乐表演
                 </b>
+
+            </div>
+
         </td>
     </tr>
     <tr  align="center">
@@ -72,7 +76,7 @@
         </tr>
         </thead>
         <tr >
-            <td rowspan="4" align="center" style="vertical-align: middle;">
+            <td rowspan="4" align="center" valign="middle">
                 音乐学</td>
         </tr>
         <tr  align="center">
@@ -90,7 +94,7 @@
 
 
         <tr >
-            <td rowspan="7" align="center" style="vertical-align: middle;">
+            <td rowspan="7" align="center" valign="middle">
                 音乐表演</td>
         </tr>
 
