--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,133 +1,129 @@
 
 <section id="clients" >
-<div class="container">
-<table  class="table table-bordered table-responsive table-hover" style="padding-top: 30px" text-align="center" border="1"  cellspacing="0" >
-    <caption><h3>专业方向</h3></caption>
-    <thead>
-    <tr>
-        <th align="center" width="20%">专业</th>
-        <th align="center" width="80%">专业方向</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr >
-        <td rowspan="5" align="center" valign="middle">
-        音乐学</td>
-    </tr>
-    <tr  align="center">
-        <td>音乐教育</td>
-    </tr>
-    <tr   align="center">
-        <td>音乐学理论</td>
-    </tr>
-    <tr   align="center">
-        <td>艺术管理</td>
-    </tr>
-    <tr   align="center">
-        <td>钢琴调律</td>
-    </tr>
+    <div class="container">
+        <table  class="table table-bordered table-responsive table-hover" style="padding-top: 30px" text-align="center" border="1"  cellspacing="0" >
+            <caption><h3>专业方向</h3></caption>
+            <thead>
+            <tr>
+                <th align="center" width="20%">专业</th>
+                <th align="center" width="80%">专业方向</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr >
+                <td rowspan="5" align="center" style="vertical-align: middle;">
+                    音乐学</td>
+            </tr>
+            <tr  align="center">
+                <td>音乐教育</td>
+            </tr>
+            <tr   align="center">
+                <td>音乐学理论</td>
+            </tr>
+            <tr   align="center">
+                <td>艺术管理</td>
+            </tr>
+            <tr   align="center">
+                <td>钢琴调律</td>
+            </tr>
 
-    <tr >
-        <td rowspan="8" align="center" valign="middle" >
-            <div style="padding-top: 24px;padding-bottom: 24px;" >
-                <b >
-                    音乐表演
-                </b>
+            <tr >
+                <td rowspan="8" align="center" style="vertical-align: middle;" >
+                    <b >
+                        音乐表演
+                    </b>
+                </td>
+            </tr>
+            <tr  align="center">
+                <td>演唱（美声、民族声乐）</td>
+            </tr>
+            <tr   align="center">
+                <td>通俗声乐演唱与编导（含通俗声乐、美声、民族声乐）</td>
+            </tr>
+            <tr   align="center">
+                <td>中国乐器演奏（二胡、琵琶、扬琴、古筝、竹笛、笙、唢呐、民族打击乐器）</td>
+            </tr>
+            <tr   align="center">
+                <td>西洋管弦•打击乐器演奏（小提琴、中提琴、大提琴、低音提琴、小号、圆号、长号、大号、长笛、双簧管、单簧管、大管、西洋打击乐器、竖琴）</td>
+            </tr>
 
-            </div>
+            <tr   align="center">
+                <td>钢琴演奏</td>
+            </tr>
+            <tr   align="center">
+                <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
+            </tr>
+            <tr   align="center">
+                <td>通俗乐器演奏（爵士鼓、古典吉他、萨克斯管）</td>
+            </tr>
 
-        </td>
-    </tr>
-    <tr  align="center">
-        <td>演唱（美声、民族声乐）</td>
-    </tr>
-    <tr   align="center">
-        <td>通俗声乐演唱与编导（含通俗声乐、美声、民族声乐）</td>
-    </tr>
-    <tr   align="center">
-        <td>中国乐器演奏（二胡、琵琶、扬琴、古筝、竹笛、笙、唢呐、民族打击乐器）</td>
-    </tr>
-    <tr   align="center">
-        <td>西洋管弦•打击乐器演奏（小提琴、中提琴、大提琴、低音提琴、小号、圆号、长号、大号、长笛、双簧管、单簧管、大管、西洋打击乐器、竖琴）</td>
-    </tr>
-
-    <tr   align="center">
-        <td>钢琴演奏</td>
-    </tr>
-    <tr   align="center">
-        <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
-    </tr>
-    <tr   align="center">
-        <td>通俗乐器演奏（爵士鼓、古典吉他、萨克斯管）</td>
-    </tr>
-
-    </tbody>
-</table>
+            </tbody>
+        </table>
 
 
-    <table class="table table-bordered table-responsive table-hover" style="padding-top: 30px"  text-align="center" border="1" cellspacing="0">
-        <caption><h3>各专业开设课程</h3></caption>
-        <tbody>
-        <thead>
-        <tr>
-            <th align="center" width="10%">专业</th>
-            <th align="center" width="30%">专业方向</th>
-            <th align="center" width="60%">课程</th>
-        </tr>
-        </thead>
-        <tr >
-            <td rowspan="4" align="center" valign="middle">
-                音乐学</td>
-        </tr>
-        <tr  align="center">
-            <td>音乐教育</td>
-            <td>视唱练耳课，基础乐理课，钢琴教授专业课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
-        <tr   align="center">
-            <td>音乐学理论</td>
-            <td>视唱练耳课，基础乐理课，声乐或钢琴或其他乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
-        <tr   align="center">
-            <td>钢琴调率方向</td>
-            <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
+        <table class="table table-bordered table-responsive table-hover" style="padding-top: 30px"  text-align="center" border="1" cellspacing="0">
+            <caption><h3>各专业开设课程</h3></caption>
+            <tbody>
+            <thead>
+            <tr>
+                <th align="center" width="10%">专业</th>
+                <th align="center" width="30%">专业方向</th>
+                <th align="center" width="60%">课程</th>
+            </tr>
+            </thead>
+            <tr >
+                <td rowspan="4" align="center" style="vertical-align: middle;">
+                    音乐学</td>
+            </tr>
+            <tr  align="center">
+                <td>音乐教育</td>
+                <td>视唱练耳课，基础乐理课，钢琴教授专业课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
+            <tr   align="center">
+                <td>音乐学理论</td>
+                <td>视唱练耳课，基础乐理课，声乐或钢琴或其他乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
+            <tr   align="center">
+                <td>钢琴调率方向</td>
+                <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
 
 
-        <tr >
-            <td rowspan="7" align="center" valign="middle">
-                音乐表演</td>
-        </tr>
+            <tr >
+                <td rowspan="7" align="center" style="vertical-align: middle;">
+                    音乐表演</td>
+            </tr>
 
-        <tr   align="center">
-            <td>演唱（美声，民族声乐，通俗声乐演唱与编导）</td>
-            <td>视唱练耳课，基础乐理课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            <tr   align="center">
+                <td>演唱（美声，民族声乐，通俗声乐演唱与编导）</td>
+                <td>视唱练耳课，基础乐理课，声乐教授专业课，研究生陪练课，文化课，观摩，自习</td>
 
-        </tr>
-        <tr   align="center">
-            <td>中国乐器演奏</td>
-            <td>视唱练耳课，基础乐理课，中国乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
-        <tr   align="center">
-            <td>西洋管弦•打击乐器演奏</td>
-            <td>视唱练耳课，基础乐理课，西洋乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
+            </tr>
+            <tr   align="center">
+                <td>中国乐器演奏</td>
+                <td>视唱练耳课，基础乐理课，中国乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
+            <tr   align="center">
+                <td>西洋管弦•打击乐器演奏</td>
+                <td>视唱练耳课，基础乐理课，西洋乐器教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
 
-        <tr   align="center">
-            <td>钢琴演奏</td>
-            <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
-        <tr   align="center">
-            <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
-            <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
-        <tr   align="center">
-            <td>通俗乐器演奏</td>
-            <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
-        </tr>
+            <tr   align="center">
+                <td>钢琴演奏</td>
+                <td>视唱练耳课，基础乐理课，钢琴教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
+            <tr   align="center">
+                <td>键盘乐器演奏与编导（钢琴、手风琴、电子管风琴）</td>
+                <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
+            <tr   align="center">
+                <td>通俗乐器演奏</td>
+                <td>视唱练耳课，基础乐理课，教授专业课，研究生陪练课，文化课，观摩，自习</td>
+            </tr>
 
-        </tbody>
-    </table>
-</div>
+            </tbody>
+        </table>
+    </div>
 </section>
 <!-- Clients Aside
     <aside class="clients">
