--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,16 @@
 
 
+<div class="container">
+    <ul class="list-icons">
+        <li><i class="fa fa-map-marker pr-10"></i> One infinity loop, 54100</li>
+        <li><i class="fa fa-phone pr-10"></i> +00 1234567890</li>
+        <li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>
+        <li><i class="fa fa-envelope-o pr-10"></i> your@email.com</li>
+    </ul>
 
+
+
+</div>
 
 <section id="contact">
 
