--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 
-
+<!--
 <div class="container">
     <ul class="list-icons">
         <li><i class="fa fa-map-marker pr-10"></i> One infinity loop, 54100</li>
@@ -7,10 +7,7 @@
         <li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>
         <li><i class="fa fa-envelope-o pr-10"></i> your@email.com</li>
     </ul>
-
-
-
-</div>
+</div>-->
 
 <section id="contact">
 
